meta-argument/ec2.tf
# resource "aws_instance" "web" {
#   ami           = var.ami
#   instance_type = var.instance_type[1]
#   key_name = "jenkinskp"
    
  
# }
